plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.7'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// jwt 관련 라이브러리들
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
	implementation 'com.nimbusds:nimbus-jose-jwt:9.37'

	//모델 mapper
	implementation 'org.modelmapper:modelmapper:3.1.1'

	//log4 jdbc2
	implementation 'org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4.1:1.16'

	// 쿼리 dsl
	implementation "io.github.openfeign.querydsl:querydsl-jpa:6.11"
	annotationProcessor "io.github.openfeign.querydsl:querydsl-apt:6.11:jpa"
	testAnnotationProcessor "io.github.openfeign.querydsl:querydsl-apt:6.11:jpa"
	annotationProcessor 'jakarta.persistence:jakarta.persistence-api'
	testAnnotationProcessor 'jakarta.persistence:jakarta.persistence-api'

	//스프링 시큐리티
	implementation 'org.springframework.boot:spring-boot-starter-security'
	testImplementation 'org.springframework.security:spring-security-test'
	//스프링 시큐리티 리소스 서버
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'

	//S3
	implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3'
	implementation platform("io.awspring.cloud:spring-cloud-aws-dependencies:3.0.0")
	//음력변환 라이브러리
	implementation 'com.ibm.icu:icu4j:74.2'

	//test 롬복 사용
	testCompileOnly 'org.projectlombok:lombok'

	//파일 유틸
	implementation 'commons-io:commons-io:2.15.1'

	// Jsoup HTML Sanitizer
 	//  - HTML 파싱 및 정화(스크립트/이벤트 제거 등)에 사용
 	//  - Jsoup.clean()을 이용해 Safelist 기반의 안전한 HTML만 남김
 	implementation 'org.jsoup:jsoup:1.16.1'

    //  - &lt;script&gt; 같은 HTML 엔티티를 실제 태그로 변환하는 데 사용
	 implementation 'org.apache.commons:commons-text:1.14.0'
	// commons-lang3를 명시적으로 고정(commons-text 취약 버전이 들어오는 것을 막기 위해)
	implementation 'org.apache.commons:commons-lang3:3.18.0'
}



tasks.named('test') {
	useJUnitPlatform()
}

clean {
	delete file('src/main/generated')
}
